--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,10 +5,10 @@
 
 body {
   min-height: 100vh;
-  width: 1500px;
-  margin: 0 auto;
   padding-bottom: 100px;
   position: relative;
+  width: 1500px;
+  margin: 0 auto;
 }
 
 header {
@@ -193,6 +193,31 @@ header {
 
 #items-list li {
   display: flex;
+}
+
+#description-container {
+  margin-top: 30px;
+}
+
+/* Dashboard */
+.dashboard-title-container {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.dashboard-events-container th {
+  width: 25%;
+}
+
+.dashboard-events-container form {
+  display: inline-block;
+}
+
+/* Edit page */
+
+.img-preview {
+  width: 350px;
+  margin-top: 20px;
 }
 
 /* footer */
